--- a/app.json
+++ b/app.json
@@ -3,5 +3,8 @@
   "description": "A barebones Node.js app using Express 4",
   "repository": "https://github.com/heroku/node-js-sample",
   "logo": "https://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"]
+  "keywords": ["node", "express", "static"],
+  "env": {
+    "buildpacks": "https://github.com/ddollar/heroku-buildpack-multi.git"
+  }
 }
