--- a/app.json
+++ b/app.json
@@ -5,6 +5,8 @@
   "logo": "https://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static"],
   "env": {
-    "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi.git"
+    "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi.git",
+	"HEROKU_TOOLBELT_API_EMAIL": ""
+	"HEROKU_TOOLBELT_API_PASSWORD": "`heroku auth:token`"
   }
 }
