--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
   "env": {
     "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi.git",
 	"HEROKU_TOOLBELT_API_EMAIL": "",
-	"HEROKU_TOOLBELT_API_PASSWORD": "`heroku auth:token`"
+	"HEROKU_TOOLBELT_API_PASSWORD": "heroku auth:token"
   }
 }
