--- a/app.json
+++ b/app.json
@@ -4,9 +4,15 @@
   "repository": "https://github.com/heroku/node-js-sample",
   "logo": "https://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static"],
+  
+  
   "env": {
     "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi.git",
 	"HEROKU_TOOLBELT_API_EMAIL": "",
-	"HEROKU_TOOLBELT_API_PASSWORD": "heroku auth:token"
+	"HEROKU_TOOLBELT_API_PASSWORD": {
+		"description": "This gets generated",
+		"generator": "secret"
+	  }
   }
+  
 }
