--- a/app.json
+++ b/app.json
@@ -8,11 +8,8 @@
   
   "env": {
     "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi.git",
-	"HEROKU_TOOLBELT_API_EMAIL": "",
-	"HEROKU_TOOLBELT_API_PASSWORD": {
-		"description": "This gets generated",
-		"generator": "secret"
-	  }
+	"HEROKU_TOOLBELT_API_EMAIL": "@gmail.com",
+	"HEROKU_TOOLBELT_API_PASSWORD": ""
   },
   
   "addons": [
