--- a/.user.ini
+++ b/.user.ini
@@ -1,3 +1,3 @@
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
-upload_max_filesize = 5M
+date.timezone = Asia/Karachi
