--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,4 +1,1 @@
-location ~* (.*\.mp3) {
-    types { application/octet-stream .pdf; }
-    default_type application/octet-stream;
-}
+##this is just a comment
