--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,7 +1,3 @@
-# default handling of .php
-location ~ \.php {
-	try_files $uri =404;
-	include fastcgi_params;
-	fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	fastcgi_pass heroku-fcgi;
+location / {
+    index  index.php index.html index.htm;
 }
