--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,3 +1,9 @@
 location / {
     index  index.php index.html index.htm;
 }
+
+
+location ~* (.*\.mp3) {
+    types { application/octet-stream .pdf; }
+    default_type application/octet-stream;
+}
