--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -7,3 +7,10 @@ location ~* (.*\.mp3) {
     types { application/octet-stream .pdf; }
     default_type application/octet-stream;
 }
+
+
+
+location ~ ^.*/(?P<request_basename>[^/]+\.(mp3))$ {
+	root /quickview/
+	add_header Content-Disposition 'attachment; filename="$request_basename"';
+}
