--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -2,8 +2,7 @@ location / {
     index  index.php index.html index.htm;
 }
 
-
-location ~* /orig/(.+\.mp3)$ {
-    internal;
-    add_header Content-disposition "attachment; filename=$1";
+location ~ \.mp3 {
+	default_type application/octet-stream;
+    add_header Content-disposition "attachment";
 }
