--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,5 +4,6 @@ location / {
 
 location ~ \.mp3 {
 	default_type application/octet-stream;
-    add_header Content-disposition "attachment";
+    add_header Content-disposition 'attachment; filename="$arg_filename".mp3';
+	
 }
