--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,6 +4,6 @@ location / {
 
 location ~ \.mp3 {
 	default_type application/octet-stream;
-    add_header Content-disposition 'attachment; filename="$arg_filename".mp3';
+    add_header Content-disposition 'attachment; filename="test.mp3"';
 	
 }
